2010-10-25  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dan Bernstein.

        Fix scrolling of noncomposited iframes within composited document
        https://bugs.webkit.org/show_bug.cgi?id=47391

        When an iframe that is painting into a compositing layer is scrolled,
        we need to repaint via the RenderObject (which dirties the compositing layer contents),
        rather than going out to hostWindow.

        Test: compositing/iframes/composited-iframe-scroll.html

        * page/FrameView.cpp:
        (WebCore::FrameView::scrollContentsSlowPath):
        * page/FrameView.h:
        * platform/ScrollView.cpp:
        (WebCore::ScrollView::scrollContents):
        (WebCore::ScrollView::scrollContentsSlowPath):
        * platform/ScrollView.h:

Canonical link: https://commits.webkit.org/61043@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70509 268f45cc-cd09-0410-ab3c-d52691b4dbfc