WebCore/page/FrameView.h
@@ -242,7 +242,8 @@ public:
 
 protected:
     virtual bool scrollContentsFastPath(const IntSize& scrollDelta, const IntRect& rectToScroll, const IntRect& clipRect);
-    
+    virtual void scrollContentsSlowPath(const IntRect& updateRect);
+
 private:
     FrameView(Frame*);
 
