WebCore/platform/ScrollView.h
@@ -264,8 +264,10 @@ protected:
     virtual void updateScrollCorner();
     virtual void paintScrollCorner(GraphicsContext*, const IntRect& cornerRect);
 
-    // Scroll the content by blitting the pixels
+    // Scroll the content by blitting the pixels.
     virtual bool scrollContentsFastPath(const IntSize& scrollDelta, const IntRect& rectToScroll, const IntRect& clipRect);
+    // Scroll the content by invalidating everything.
+    virtual void scrollContentsSlowPath(const IntRect& updateRect);
 
 private:
     RefPtr<Scrollbar> m_horizontalScrollbar;
